Update kitty.conf to use navigation plugin.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -17,3 +17,11 @@ enable_audio_bell no
 
 enabled_layouts splits
 active_border_color #e38aff
+map alt+v launch --location=vsplit --cwd=current
+map alt+h launch --location=hsplit --cwd=current
+map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j "^.* - nvim$"
+map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k "^.* - nvim$"
+map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h "^.* - nvim$"
+map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l "^.* - nvim$"
+allow_remote_control yes
+listen_on unix:@mykitty
