Switch theme from dracula to nord.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,4 +1,4 @@
-include dracula.conf
+include nord.conf
 
 editor nvim
 
@@ -16,7 +16,7 @@ window_padding_width 8
 enable_audio_bell no
 
 enabled_layouts splits
-active_border_color #e38aff
+active_border_color #5e81ac
 map alt+v launch --location=vsplit --cwd=current
 map alt+h launch --location=hsplit --cwd=current
 map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j "^.* - nvim$"
