Add old bash config.
Future commits will clean this up, but I need to add at least the old
version here so that I can modify the PATH to point to the custom git
commands directory (so that I can avoid using sudo paths).

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,11 +11,8 @@
     ~/.config/kitty: kitty
     ~/.gitconfig: git/.gitconfig
     ~/.gitignore_global: git/.gitignore_global
-    /usr/local/bin/gitutils.py: git/custom-commands/gitutils.py
-    /usr/local/bin/git-new-feature-branch: git/custom-commands/git-new-feature-branch
-    /usr/local/bin/git-map-branches: git/custom-commands/git-map-branches
-    /usr/local/bin/git-upmerge: git/custom-commands/git-upmerge
     ~/.tmux.conf: tmux/.tmux.conf
+    ~/.bashrc: bash/bashrc.old
 
 - shell:
     - vim +PlugUpdate +qa
