--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,9 +9,9 @@
 - link:
     ~/.config/nvim: nvim
     ~/.config/kitty: kitty
-    ~/.gitconfig: git/.gitconfig
-    ~/.gitignore_global: git/.gitignore_global
-    ~/.tmux.conf: tmux/.tmux.conf
+    ~/.gitconfig: git/gitconfig
+    ~/.gitignore_global: git/gitignore_global
+    ~/.tmux.conf: tmux/tmux.conf
     ~/.bashrc: bash/bashrc.old
 
 - shell:
