Add fzf.bash to symlinks.
Should have been included in ffaa63 but alas.

--- a/links.ini
+++ b/links.ini
@@ -7,6 +7,7 @@
 ~/git-prompt.sh: git/git-prompt.sh
 ~/.tmux.conf: tmux/tmux.conf
 ~/.bashrc: bash/bashrc.old
+~/.fzf.bash: bash/fzf.bash
 
 [shell]
 vim +PlugUpdate +qall
