Rename repo to env and create dotfiles subdir.
This should better reflect the purpose of this repo moving forward: to
provide ways of emulating parts or all of my current environment. This
currently includes existing dotfiles (moved to separate directory), but
in the future will also contain tools, services, etc.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 TODO
-nvim/plugged
-git/custom-commands/gitutils.pyc
-git/custom-commands/__pycache__
+dotfiles/nvim/plugged
+dotfiles/git/custom-commands/gitutils.pyc
+dotfiles/git/custom-commands/__pycache__
