--- a/dotfiles/links.ini
+++ b/dotfiles/links.ini
@@ -5,9 +5,9 @@
 ~/.gitignore_global: git/gitignore_global
 ~/git-completion.bash: git/git-completion.bash
 ~/git-prompt.sh: git/git-prompt.sh
+~/rustup-completions.bash: bash/rustup-completions.bash
 ~/.tmux.conf: tmux/tmux.conf
-~/.bashrc: bash/bashrc.old
-~/.fzf.bash: bash/fzf.bash
+~/.bashrc: bash/bashrc
 
 [shell]
 vim +PlugUpdate +qall
