--- a/dotfiles/kitty/kitty.conf
+++ b/dotfiles/kitty/kitty.conf
@@ -2,10 +2,8 @@ include nord.conf
 
 editor nvim
 
-# Install via https://github.com/ronniedroid/getnf
-# Verify installation via `kitty list-fonts | grep Jet`
-font_family JetBrainsMono Nerd Font
-font_size 12
+font_family JetBrainsMono Nerd Font Mono
+font_size 14
 adjust_line_height 125%
 
 remember_window_size no
