Add bat config to force nord theme in all uses.

--- a/dotfiles/links.ini
+++ b/dotfiles/links.ini
@@ -1,6 +1,7 @@
 [links]
 ~/.config/nvim: nvim
 ~/.config/kitty: kitty
+~/.config/bat: bat
 ~/.gitconfig: git/gitconfig
 ~/.gitignore_global: git/gitignore_global
 ~/git-completion.bash: git/git-completion.bash
