Revert font in kitty.conf.
The old way seems to work now that I've updated
nerd-fonts-jetbrains-mono to 2.2.2.

--- a/dotfiles/kitty/kitty.conf
+++ b/dotfiles/kitty/kitty.conf
@@ -2,7 +2,7 @@ include nord.conf
 
 editor nvim
 
-font_family JetBrainsMono Nerd Font Mono
+font_family JetBrainsMono Nerd Font
 font_size 14
 adjust_line_height 125%
 
