Replace adjust_line_height in kitty conf.
Seems it was deprecated in favor of modify_font.

--- a/dotfiles/kitty/kitty.conf
+++ b/dotfiles/kitty/kitty.conf
@@ -4,7 +4,7 @@ editor nvim
 
 font_family JetBrainsMono Nerd Font
 font_size 14
-adjust_line_height 125%
+modify_font cell_height 125%
 
 remember_window_size no
 initial_window_width 160c
