WIP: add zsh configs

--- a/dotfiles/symlinks.ini
+++ b/dotfiles/symlinks.ini
@@ -13,6 +13,7 @@
 ~/.tmux.conf: tmux/tmux.conf
 ~/.bashrc: bash/bashrc
 ~/.arduino15/arduino-cli.yaml: acli/arduino-cli.yaml
+~/.zshrc: zsh/zshrc
 
 [shell]
 vim +PlugUpdate +qall
