Add randwallpaper tool and autostart entry.
Used for setting a random background picked from a specific directory at
every GNOME login.

--- a/dotfiles/links.ini
+++ b/dotfiles/links.ini
@@ -2,6 +2,7 @@
 ~/.config/nvim: nvim
 ~/.config/kitty: kitty
 ~/.config/bat: bat
+~/.config/autostart: autostart
 ~/.gitconfig: git/gitconfig
 ~/.gitignore_global: git/gitignore_global
 ~/.tmux.conf: tmux/tmux.conf
