--- a/dotfiles/kitty/kitty.conf
+++ b/dotfiles/kitty/kitty.conf
@@ -14,6 +14,9 @@ enable_audio_bell no
 
 enabled_layouts splits
 active_border_color #5e81ac
+action_alias run_command send_text normal,application
+map alt+l run_command exa -al --color=always --group-directories-first\n
+map alt+s run_command sudo !!\n
 map alt+v launch --location=vsplit --cwd=current
 map alt+h launch --location=hsplit --cwd=current
 map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
