Transition away from fm/ "monorepo".
We now simply use the home directory directly. This does result in
slightly less portability, as the portions that are backed up are a
subset of the full home directory, but makes day-to-day usage more
convenient.

As part of this migration, the standard XDG directories were renamed in
the associated user-dirs.dirs config.

--- a/dotfiles/symlinks.ini
+++ b/dotfiles/symlinks.ini
@@ -3,6 +3,7 @@
 ~/.config/kitty: kitty
 ~/.config/bat: bat
 ~/.config/autostart: autostart
+~/.config/user-dirs.dirs: xdg/user-dirs.dirs
 ~/.gitconfig: git/gitconfig
 ~/.gitignore_global: git/gitignore_global
 ~/.tmux.conf: tmux/tmux.conf
