--- a/dotfiles/symlinks.ini
+++ b/dotfiles/symlinks.ini
@@ -5,6 +5,7 @@
 ~/.config/bat: bat
 ~/.config/autostart: autostart
 ~/.config/user-dirs.dirs: xdg/user-dirs.dirs
+~/.config/mpv: mpv
 ~/.config/systemd/user/transcribe_watcher.service: systemd/transcribe_watcher.service
 ~/.config/systemd/user/ollama.service: systemd/ollama.service
 ~/.config/systemd/user/randwallpaper.service: systemd/randwallpaper.service
