Add basic arduino cli config.
For now the only deviations from the stock config is the additional
board url for the seeeduino boards and a custom user directory location.

--- a/dotfiles/symlinks.ini
+++ b/dotfiles/symlinks.ini
@@ -8,6 +8,7 @@
 ~/.gitignore_global: git/gitignore_global
 ~/.tmux.conf: tmux/tmux.conf
 ~/.bashrc: bash/bashrc
+~/.arduino15/arduino-cli.yaml: acli/arduino-cli.yaml
 
 [shell]
 vim +PlugUpdate +qall
