--- a/dotfiles/symlinks.ini
+++ b/dotfiles/symlinks.ini
@@ -4,6 +4,7 @@
 ~/.config/bat: bat
 ~/.config/autostart: autostart
 ~/.config/user-dirs.dirs: xdg/user-dirs.dirs
+~/.config/systemd/user/transcribe_watcher.service: systemd/transcribe_watcher.service
 ~/.gitconfig: git/gitconfig
 ~/.gitignore_global: git/gitignore_global
 ~/.tmux.conf: tmux/tmux.conf
