--- a/dotfiles/symlinks.ini
+++ b/dotfiles/symlinks.ini
@@ -5,6 +5,7 @@
 ~/.config/autostart: autostart
 ~/.config/user-dirs.dirs: xdg/user-dirs.dirs
 ~/.config/systemd/user/transcribe_watcher.service: systemd/transcribe_watcher.service
+~/.config/systemd/user/ollama.service: systemd/ollama.service
 ~/.gitconfig: git/gitconfig
 ~/.gitignore_global: git/gitignore_global
 ~/.tmux.conf: tmux/tmux.conf
