Change usage names of jetbrains font.
Seems the font name was changed recently.

--- a/dotfiles/kitty/kitty.conf
+++ b/dotfiles/kitty/kitty.conf
@@ -2,7 +2,7 @@ include nord.conf
 
 editor nvim
 
-font_family JetBrainsMono Nerd Font
+font_family JetBrainsMono NF
 font_size 14
 modify_font cell_height 125%
 
