Replace autostart with systemd for randwallpaper.
Wanted to replace screentearfix as well but that's trickier to get right
seeing as X needs access to display variables and whatnot, will try
again at some point.

--- a/dotfiles/symlinks.ini
+++ b/dotfiles/symlinks.ini
@@ -6,6 +6,7 @@
 ~/.config/user-dirs.dirs: xdg/user-dirs.dirs
 ~/.config/systemd/user/transcribe_watcher.service: systemd/transcribe_watcher.service
 ~/.config/systemd/user/ollama.service: systemd/ollama.service
+~/.config/systemd/user/randwallpaper.service: systemd/randwallpaper.service
 ~/.gitconfig: git/gitconfig
 ~/.gitignore_global: git/gitignore_global
 ~/.tmux.conf: tmux/tmux.conf
