--- a/dotfiles/kitty/kitty.conf
+++ b/dotfiles/kitty/kitty.conf
@@ -19,9 +19,9 @@ map alt+s run_command sudo !!\n
 map alt+f toggle_fullscreen
 map alt+v launch --location=vsplit --cwd=current
 map alt+h launch --location=hsplit --cwd=current
-map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
-map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
-map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
-map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
+map ctrl+j kitten pass_keys.py bottom ctrl+j
+map ctrl+k kitten pass_keys.py top    ctrl+k
+map ctrl+h kitten pass_keys.py left   ctrl+h
+map ctrl+l kitten pass_keys.py right  ctrl+l
 allow_remote_control yes
 listen_on unix:@mykitty
