Reintroduce simplified `notes` script.
This version is much simpler and more streamlined, basically just
searching through my notes directory for file names and their tags and
presenting those lines to `fzf` so that I can open the selected file
with `helix`.

Also change Alt-w in kitty to use this new script instead of opening the
wiki index in neovim.

--- a/dotfiles/kitty/kitty.conf
+++ b/dotfiles/kitty/kitty.conf
@@ -16,7 +16,7 @@ enabled_layouts splits
 active_border_color #5e81ac
 action_alias run_command send_text normal,application
 map alt+s run_command sudo !!\n
-map alt+w run_command nvim +WikiIndex\n
+map alt+w run_command /home/fed/env/scripts/notes\n
 map alt+f toggle_fullscreen
 map alt+v launch --location=vsplit --cwd=current
 map alt+h launch --location=hsplit --cwd=current
