--- a/dotfiles/symlinks.ini
+++ b/dotfiles/symlinks.ini
@@ -4,6 +4,7 @@
 ~/.config/kitty: kitty
 ~/.config/bat: bat
 ~/.config/autostart: autostart
+~/.config/marksman: marksman
 ~/.config/user-dirs.dirs: xdg/user-dirs.dirs
 ~/.config/systemd/user/transcribe_watcher.service: systemd/transcribe_watcher.service
 ~/.config/systemd/user/ollama.service: systemd/ollama.service
